# tiger-emu

./: Cargo.toml
docs/: 6502_cpu.md
emu/: Cargo.toml
emu/src/: assembly.rs  gui.rs  main.rs  thread_nes.rs  triple_buffer.rs
emu/src/gui/: framework.rs  ppu.rs  ui.rs
emu/src/thread_nes/: emu_thread.rs  ui_thread.rs
nes/: Cargo.toml
nes/src/: cart.rs  console.rs  cpu.rs  hid.rs  io.rs  lib.rs  mem_map.rs  ppu.rs  registers.rs
nes/src/cart/: ines_header.rs  mapper.rs
nes/src/cart/mapper/: nrom.rs
nes/src/cpu/: bus.rs  instruction.rs  registers.rs  status_reg.rs
nes/src/cpu/instruction/: actions.rs  addr_mode_data.rs  iterator.rs  oper_data.rs  state.rs
nes/src/hid/: standard.rs
nes/src/ppu/: bus.rs  color.rs  color_palette.rs  nametable.rs  palette.rs  pattern.rs  registers.rs
nes/src/roms/: mod.rs
nes/tests/: cpu.rs  nestest.rs
palette/: palgen-persune.py
src/: bus.rs  cartridge.rs  cpu.rs  gui.rs  ines.rs  main.rs  motherboard.rs  nes.rs  ppu_bus.rs
src/gui/: framework.rs  gui.rs  main_gui.rs
src/ines/: cart.rs  clock_counter.rs  console.rs  cpu.rs  io.rs  ppu.rs
src/ines/cart/: ines_header.rs  mapper.rs
src/ines/cpu/: bus.rs  instruction.rs  registers.rs  status_reg.rs
src/ines/ppu/: bus.rs
src/ines/roms/: mod.rs
src/nes/: board.rs  bus.rs  bus6502.rs  cartridge.rs  cpu6502.rs  mapper.rs  ppu2c02.rs
src/nes/cpu6502/: address_mode.rs  instructions.rs  opcode.rs  registers.rs
src/nes/mapper/: ines_header.rs  nrom.rs
src/nes/ppu2c02/: bus.rs  color.rs  memory.rs  palette.rs  ppu_bus.rs  registers.rs
(+11 files in other folders)
