[package]
name = "nes_ultra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
egui = "0.22.0"
egui-wgpu = "0.22.0"
egui-winit = "0.22.0"
env_logger = "0.10.0"
error-iter = "0.4.1"
log = "0.4.20"
pixels = "0.13.0"
rand = "0.8.5"
rfd = "0.12.0"
winit = "0.28.6"
winit_input_helper = "0.14.1"
