[package]
name = "nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"

[dev-dependencies]
serde = { version = "1.0.188", default-features = false, features = ["std", "derive"] }
serde_json = "1.0"